--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,8 @@
         </activity>
         <activity android:name=".ui.SeleccinVideojuego" />
         <activity
-            android:name=".LoginActivity"
-            android:configChanges="screenSize|orientation"
-            android:label="@string/title_activity_login">
+            android:name=".ui.LoginActivity"
+            android:configChanges="screenSize|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
