--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.RicoPaRico">
+        android:theme="@style/Theme.RicoPaRico"
+        android:largeHeap="true">
         <activity
             android:name=".ui.ActividadPrincipal"
             android:configChanges="screenSize|orientation"
