--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.RicoPaRico"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        android:theme="@style/Theme.RicoPaRico">
         <activity
             android:name=".ui.ActividadPrincipal"
             android:configChanges="screenSize|orientation"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ConNavigationDrawer"></activity>
+            android:theme="@style/Theme.ConNavigationDrawer" />
         <activity
             android:name=".ui.ActividadConfiguracion"
             android:label="@string/titulo_actividad_configuracion"
@@ -35,7 +35,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.CestaCompraActivity"></activity>
+        <activity android:name=".ui.CestaCompraActivity" />
+        <activity android:name=".ui.CambiarPasswordActivity"></activity>
     </application>
 
 </manifest>
