--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile files('libs/droidText.0.4.jar')
 }
