--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +25,7 @@
             android:theme="@style/Theme.ConNavigationDrawer" />
         <activity android:name=".Usuario.SeleccinVideojuego" />
         <activity
-            android:name=".Usuario.LoginActivity"
+            android:name=".Login.LoginActivity"
             android:configChanges="screenSize|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +36,8 @@
         <activity android:name=".Usuario.CestaCompraActivity" />
         <activity android:name=".Usuario.CambiarPasswordActivity" />
         <activity android:name=".Usuario.TramitarPedido" />
-        <activity android:name=".Usuario.SeleccionPedido"></activity>
+        <activity android:name=".Usuario.SeleccionPedido" />
+        <activity android:name=".Login.Registro"></activity>
     </application>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
